[extension] Fix some alignment/overflow problems

--- a/chrome-extension/popup/popup.css
+++ b/chrome-extension/popup/popup.css
@@ -73,7 +73,7 @@ a:hover {
 }
 
 .Popup-currentHuntInfo {
-  margin: 10px;
+  margin: 10px 15px;
   position: relative;
 }
 
@@ -106,6 +106,7 @@ a:hover {
   border-top: 1px solid #ccc;
   max-height: 283px;
   overflow-y: auto;
+  padding: 0 5px 5px;
   position: relative;
 }
 
