--- a/chrome-extension/toolbar/toolbar.css
+++ b/chrome-extension/toolbar/toolbar.css
@@ -4,11 +4,12 @@ body {
 
 #toolbar {
   background: linear-gradient(to top, #f5f5f5, #eee);
-  border-bottom: 1px solid #d9d9d9;
+  box-shadow: inset 0 -1px #d9d9d9;
   box-sizing: border-box;
   color: #6d6d6d;
   font-size: 12px;
   height: 100vh;
+  overflow: hidden;
   white-space: nowrap;
 }
 
